# django-querytagger

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
django_querytagger/: apps.py  middleware.py  signals.py  tagging.py  wrapper.py
