[project]
name = "django-querytagger"
dynamic = ["version"]
description = "Tag SQL queries with execution contxt"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = []

[build-system]
requires = [
    "setuptools",
]

[project.urls]
homepage = "https://github.com/pretix/django-querytagger"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "django_querytagger.__version__"}

[tool.setuptools.packages.find]
include = ["django_querytagger"]
namespaces = false